# Kori-Backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml  pr-check.yml
kori/: __main__.py
kori/alembic/: env.py
kori/alembic/versions/: 22ac11d1898b_create_organisation_table.py  22ac11d1898b_create_organization_table.py  2929c8b40852_create_warehouse_table.py  2f4cdef0f290_create_store_product_table.py  33f133688a49_default_store_in_user.py  459a65179543_create_user_table.py  523744512cc0_create_warehouse_product_table.py  5a6955661060_create_customer_table.py  737b22dc5091_create_reorders_table.py  7516ee47a79f_create_customer_bill_table.py  8588dd347b82_create_global_config_table.py  910e53bb67cc_create_store_table.py  c48eb23a40bc_create_product_table.py  d367b143516b_create_reorder_placed_column.py  de4af1b594b0_create_product_version_table.py  f4a2be1b7417_create_product_billed_table.py
kori/app/core/: config.py  crypto.py  exceptions.py  util.py
kori/app/dao/: customer.py  customer_bill.py  global_config.py  organization.py  product.py  store.py  store_product.py  user.py
kori/app/db/: base.py  connection.py
kori/app/models/: __init__.py  customer.py  customer_bill.py  global_config.py  organization.py  product.py  product_billed.py  product_version.py  reorder.py  store.py  store_product.py  user.py  warehouse.py  warehouse_product.py
kori/app/routers/: customer.py  customer_bill.py  global_config.py  organization.py  product.py  store.py  store_product.py  user.py
kori/app/schemas/: customer.py  customer_bill.py  (+7 more)
(+7 files in other folders)
