[tool.poetry]
name = "kori-backend"
version = "0.1.0"
description = "A Retail Store Automation Platform"
authors = ["baxx <susanth1503@gmail.com>"]
readme = "README.md"
packages = [{include = "kori"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.3"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.4"}
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"
python-jose = "^3.3.0"
cryptography = "^39.0.0"
bcrypt = "^4.0.1"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
poetry = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']


[tool.isort]
py_version = 310
profile = "black"
line_length = 120
skip_gitignore = true
multi_line_output = 3
remove_redundant_aliases = true
include_trailing_comma = true